--- a/src/App.css
+++ b/src/App.css
@@ -6,8 +6,8 @@
 .menu{
   background-color:  #6B2E38;
   display: flex; 
-  align-items: center; 
-  justify-content: space-between;
+  align-items: center;
+  justify-content: space-around;
 }
 
 .menu a{
@@ -35,15 +35,21 @@
 }
 
 .inicio p{
-  font-size: 30px;
+  font-size: 27px;
   font-family: 'Times New Roman';
   color: #6B2E38;
   text-align: center;
+  margin: auto;
+  width: 900px;
   border-top: 2px solid #380c13;
 }
 
 .moça{
-  width: 330px;
+  width: 530px;
+  margin: auto;
+  display: block;
+  padding-top: 30px;
+  padding-bottom: 60px;
 }
 
 .botao{
@@ -56,18 +62,18 @@
   border-radius: 8px;
 }
 
-.botao a{
-  text-decoration: none;
-}
-
 .botao:hover{
   background-color: #380c13;
+}
+
+.inicio a{
+  text-decoration: none;
 }
 
 /* FOOTER */
 
 .baixo{
-  margin-top: 200px;
+  margin-top: 700px;
   background-color:  #6B2E38;
   display: flex; 
   align-items: center; 
@@ -95,7 +101,6 @@
   display:block;
 }
 
-
 .menu-nav li ul{
   border:1px solid #c0c0c0;
   display:block;
@@ -116,8 +121,20 @@
   color: #6B2E38;
 }
 
-.faleconosco button{
+.enviar{
+  color: beige;
   background-color: #6B2E38;
+  width: 130px; 
+  height: 50px;
+  border-radius: 8px;
+}
+
+.enviar:hover{
+  background-color: #380c13;
+}
+
+.forms a{
+  text-decoration: none;
 }
 
 /* QUEM SOMOS */
@@ -142,7 +159,8 @@
 }
 
 .historia img{
-  width: 80%;
+  margin-left: 30px;
+  width: 90%;
   display: block;
 }
 
@@ -157,4 +175,117 @@
   line-height: 1.5;
   font-size: 16px;
   text-align: justify;
+}
+
+/* CHAT */
+
+.chat-app {
+  display: flex;
+  height: 100vh;
+  font-family: Arial, sans-serif;
+}
+
+.sidebar {
+  width: 25%;
+  background-color: #E3C6C6;
+  border-right: 1px solid #ccc;
+  overflow-y: auto;
+}
+
+.user-list {
+  padding: 10px;
+  background-color: #FFFEFE;
+}
+
+.user {
+  padding: 15px;
+  cursor: pointer;
+  border-bottom: 1px solid #FFF5F5;
+}
+
+.user.selected {
+  background-color: #e0e0e0;
+  font-weight: bold;
+}
+
+.chat-container {
+  width: 65%;
+ padding: 50px;
+  float: height;
+  height: 820px;
+  flex-direction: column;
+}
+
+.messages {
+  flex-grow: 1;
+  padding: 20px;
+  background-color: #fff;
+  overflow-y: auto;
+  border-bottom: 1px solid#ccc;
+}
+
+.message {
+  margin-bottom: 10px;
+  padding: 10px;
+  background-color: #e6e6e6;
+  border-radius: 5px;
+}
+
+.input-container {
+  display: flex;
+  padding: 10px;
+  background-color: #f5f5f5;
+  border-top: 1px solid #ccc;
+}
+
+.input-container input {
+  flex-grow: 1;
+  padding: 10px;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  margin-right: 10px;
+  outline: none;
+}
+
+.input-container button {
+  padding: 10px 20px;
+  border: none;
+  border-radius: 5px;
+  background-color: #6B2E38;
+  color: white;
+  cursor: pointer;
+}
+
+.input-container button:hover {
+  background-color: #380c13;
+}
+
+/* LOJAS */
+
+.lojas{
+  background-image: url(mulheres.jpeg);
+  background-size: cover;
+  padding: 24px;
+  display: flex;
+  justify-content: center;
+}
+
+.procurar{
+  color: white;
+  background-color: #6B2E38;
+  margin: auto;
+  display: block;
+  width: 200px; 
+  height: 50px;
+  border-radius: 8px;
+}
+  
+.procurar:hover{
+  background-color: #380c13;
+}
+
+.pesquisar{
+  width: 980px;
+  border-radius: 8px;
+  margin-right: 10px;
 }
